correct image name in ks8/deployment.yaml

--- a/catastrophe/k8s/deployment.yaml
+++ b/catastrophe/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: alumni-portal
-          image: alumni-portal-app:latest    # ✅ Matches your local image
+          image: alumni-portal:latest    # ✅ Matches your local image
           imagePullPolicy: Never             # ✅ Prevents Kubernetes from trying to pull from Docker Hub
           ports:
             - containerPort: 4000
